--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -23,36 +23,26 @@
 
 .note-app {
     width: 80%;
-    border: solid #fff;
     margin-inline: auto;
     padding: 10px 20px 20px;
 
-    h1 {
-        text-align: center;
-        margin-bottom: 10px;
-    }
+    nav {
+        border: solid #fff;
+        display: flex;
+        justify-content: space-between;
+        padding: 5px 10px;
 
-    .note-app__menu {
-        list-style-type: none;
-        margin-bottom: 20px;
+        ul {
+            padding: 10px;
+            li {
+                list-style-type: none;
+                display: inline-block;
+                margin-left: 10px;
 
-        li {
-            display: inline-block;
-            
-            &:first-child {
-                margin-right: 10px;
-            }
-
-            button {
-                background-color: transparent;
-                border: solid;
-                color: #fff;
-                font-size: 1rem;
-                padding: 5px 10px;
-
-                &:not(.active):hover {
-                    background-color: #fff;
-                    color: #000;
+                a {
+                    text-decoration: none;
+                    color: #fff;
+                    font-weight: bold;
                 }
             }
         }
