--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -8,12 +8,19 @@
 
 :root {
     --font-family: "Roboto", sans-serif;
+    --color: #fff;
+    --background-color: #18181b;
 
-    background-color: #18181b;
-    color: #fff;
+    background-color: var(--background-color);
+    color: var(--color);
     font-family: var(--font-family);
     font-size: 16px;
     margin-block: 20px 30px;
+}
+
+[data-theme="light"] {
+    --color: #18181b;
+    --background-color: #fff;
 }
 
 svg {
@@ -24,14 +31,9 @@ svg {
     }
 }
 
-.active {
-    background-color: #fff !important;
-    color: #000 !important;
-}
-
 a {
     text-decoration: none;
-    color: #fff;
+    color: var(--color);
 
     &:hover {
         color: #e0e0e0;
@@ -51,7 +53,7 @@ a {
 .btn-logout {
     background-color: transparent;
     border: none;
-    color: #fff;
+    color: var(--color);
     font-size: 20px;
     display: flex;
     gap: 10px;
@@ -63,7 +65,7 @@ a {
     padding: 10px 20px 20px;
 
     nav {
-        border: solid #fff;
+        border: solid var(--color);
         display: flex;
         justify-content: space-between;
         padding: 5px 10px;
@@ -94,7 +96,7 @@ a {
 
                 a {
                     text-decoration: none;
-                    color: #fff;
+                    color: var(--color);
                     font-weight: bold;
                 }
             }
@@ -126,7 +128,7 @@ a {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    border: solid #fff;
+    border: solid var(--color);
 
     &.note-detail {
         width: 50%;
@@ -144,7 +146,7 @@ a {
     }
 
     .note-item__buttons {
-        border-top: solid #fff;
+        border-top: solid var(--color);
         display: flex;
 
         & > * {
@@ -152,10 +154,10 @@ a {
             background-color: transparent;
             border: none;
             padding-block: 5px;
+            color: var(--color);
 
             &:nth-child(1) {
-                color: #f00;
-                border-right: solid #fff;
+                border-right: solid var(--color);
 
                 &:hover {
                     color: #b00020;
@@ -163,8 +165,6 @@ a {
             }
 
             &:nth-child(2) {
-                color: yellow;
-
                 &:hover {
                     color: #c49000;
                 }
@@ -174,7 +174,7 @@ a {
 }
 
 .note-add-form {
-    border: solid #fff;
+    border: solid var(--color);
     padding: 20px;
     margin-top: 20px;
     width: 60%;
@@ -228,7 +228,7 @@ a {
 }
 
 .auth-page {
-    border: solid #fff;
+    border: solid var(--color);
     width: 60%;
     margin-inline: auto;
     padding: 10px 20px;
@@ -274,6 +274,26 @@ a {
     }
 }
 
+.toggle-button {
+    display: flex;
+    margin-bottom: 5px;
+    width: fit-content;
+    margin-left: auto;
+
+    & > * {
+        background: transparent;
+        padding: 5px 10px;
+        min-width: 44px;
+        color: var(--color);
+        border: none;
+
+        &:nth-child(2) {
+            border: solid var(--color);
+            margin-left: 10px;
+        }
+    }
+}
+
 /* Media Query */
 @media screen and (max-width: 768px) {
     .note-app {
@@ -308,7 +328,7 @@ a {
                 display: block;
                 background-color: transparent;
                 border: none;
-                color: #fff;
+                color: var(--color);
                 font-size: 28px;
             }
     
@@ -316,10 +336,10 @@ a {
                 display: none;
                 position: fixed;
                 width: 100vw;
-                background-color: #18181b;
+                background-color: var(--background-color);
                 top: 0;
                 left: 0;
-                border-bottom: solid #fff;
+                border-bottom: solid var(--color);
 
                 li {
                     display: block;
@@ -347,42 +367,5 @@ a {
 
     .note-item.note-detail {
         width: 100%;
-    }
-
-    .note-app {
-        nav {
-            #hamburger-button {
-                display: block;
-                background-color: transparent;
-                border: none;
-                color: #fff;
-                font-size: 28px;
-            }
-    
-            ul {
-                display: none;
-                position: fixed;
-                width: 100vw;
-                background-color: #18181b;
-                top: 0;
-                left: 0;
-                border-bottom: solid #fff;
-
-                li {
-                    display: block;
-                    width: fit-content;
-                    margin-inline: auto;
-                    margin-bottom: 10px;
-
-                    &:first-child {
-                        margin-bottom: 10px;
-                    }
-
-                    &:nth-child(4) {
-                        margin-right: auto;
-                    }
-                }
-            }
-        }
     }
 }
