--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -15,7 +15,7 @@
     color: var(--color);
     font-family: var(--font-family);
     font-size: 16px;
-    margin-block: 20px 30px;
+    margin-block: 0 30px;
 }
 
 [data-theme="light"] {
