--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -59,6 +59,29 @@ a {
     gap: 10px;
 }
 
+.spinner {
+    position: fixed;
+    height: 50px;
+    width: 50px;
+    border: 5px solid var(--color);
+    border-radius: 50%;
+    border-bottom-color: transparent;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    animation: rotate 1s linear infinite;
+}
+
+@keyframes rotate {
+    0% {
+        transform: rotate(0deg);
+    }
+
+    100% {
+        transform: rotate(360deg);
+    }
+}
+
 .note-app {
     width: 80%;
     margin-inline: auto;
