--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -10,6 +10,7 @@
     --font-family: "Roboto", sans-serif;
     --color: #fff;
     --background-color: #18181b;
+    --hover: #e0e0e0;
 
     background-color: var(--background-color);
     color: var(--color);
@@ -21,6 +22,7 @@
 [data-theme="light"] {
     --color: #18181b;
     --background-color: #fff;
+    --hover: #461111;
 }
 
 svg {
@@ -36,7 +38,7 @@ a {
     color: var(--color);
 
     &:hover {
-        color: #e0e0e0;
+        color: var(--hover);
     }
 }
 
